# difftastic.nvim

./: Cargo.toml  LICENSE.md  README.md  justfile
.cargo/: config.toml
.github/workflows/: release.yaml  rust.yaml
doc/: difftastic-nvim.txt  tags
lua/difftastic-nvim/: binary.lua  diff.lua  highlight.lua  init.lua  keymaps.lua  tree.lua
plugin/: difftastic-nvim.lua
src/: difftastic.rs  lib.rs  processor.rs
tests/: diff_spec.lua  minimal_init.lua
