[package]
name = "difftastic_nvim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11", features = ["module", "luajit"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13"

[profile.release]
codegen-units = 1
lto = "fat"
